--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root" class="flex flex-wrap justify-center" ></div>
+    <div id="root" class="flex flex-wrap justify-center items-end mt-16" ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
